kubernetes/apps/mcp/flux-operator-mcp/app/httproute.yaml
---
# yaml-language-server: $schema=https://crd.kantai.xyz/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator-mcp
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 401"]
spec:
  hostnames:
    - flux-mcp.kantai.xyz
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: mcp-flux-operator-mcp-proxy
          port: 8080
